--- a/source/amorphous_gen/genAmorphous.ipynb
+++ b/source/amorphous_gen/genAmorphous.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,11 @@
     "        self.write_packmol_input()\n",
     "\n",
     "        # run packmol\n",
-    "        os.system(\"packmol < packmol.inp > packmol.out\")\n",
-    "\n",
+    "        lines = [line.strip() for line in open(\"./path.dat\")]\n",
+    "        packmol = lines[2].split('=')[1]\n",
+    "        command = packmol + \" < packmol.inp > packmol.out\"\n",
+    "        os.system(command)\n",
+    "        # os.system(\"/home/taeyoung/Downloads/packmol-20.14.3/packmol < packmol.inp > packmol.out\")\n",
     "        # write POSCAR\n",
     "        self.covert_pdb_to_poscar(outfile)\n",
     "\n",
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,10 +215,10 @@
     "            self.pot_recommend[name] = recommend\n",
     "    \n",
     "    def read_path_potcar(self):\n",
-    "        if not(os.path.isfile('path_potcar.dat')):\n",
-    "            print('path_potcar.dat is not found.\\n')\n",
+    "        if not(os.path.isfile('path.dat')):\n",
+    "            print('path.dat is not found.\\n')\n",
     "            sys.exit(0)\n",
-    "        lines = [line.strip() for line in open('path_potcar.dat')]\n",
+    "        lines = [line.strip() for line in open('path.dat')]\n",
     "        self.prefix_pot = lines[0].split('=')[1] if self.potcar == 'pbe'\\\n",
     "            else lines[1].split('=')[1]\n",
     "        if self.prefix_pot[-1] != '/':\n",
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,28 +352,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POSCAR_1000 was generated.\n",
-      "POSCAR_2000 was generated.\n",
-      "POSCAR_3000 was generated.\n",
-      "POSCAR_4000 was generated.\n",
-      "POSCAR_5000 was generated.\n",
-      "POSCAR_6000 was generated.\n",
-      "POSCAR_7000 was generated.\n",
-      "POSCAR_8000 was generated.\n",
-      "POSCAR_9000 was generated.\n",
-      "POSCAR_10000 was generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "struc = genAmorphous(10.00, 'Hf34O67')\n",
+    "struc = genAmorphous(10.00, 'Hf34O67')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "inputs = genInput(charge=2)"
    ]
   },
