--- a/src/amorphous/backup/genAmorphous.ipynb
+++ b/src/amorphous/backup/genAmorphous.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "import subprocess\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +40,8 @@
     "        self.atom_num = []\n",
     "        self.divide_chem_formula()\n",
     "\n",
+    "        self.prefix_data = '../../data/'\n",
+    "\n",
     "        # check atom name\n",
     "        for name in self.atom_name:\n",
     "            if not(name in self.atomMass.keys()):\n",
@@ -53,11 +56,18 @@
     "        self.write_packmol_input()\n",
     "\n",
     "        # run packmol\n",
-    "        lines = [line.strip() for line in open(\"./path.dat\")]\n",
-    "        packmol = lines[2].split('=')[1]\n",
-    "        command = packmol + \" < packmol.inp > packmol.out\"\n",
-    "        os.system(command)\n",
-    "        # os.system(\"/home/taeyoung/Downloads/packmol-20.14.3/packmol < packmol.inp > packmol.out\")\n",
+    "        try:\n",
+    "            path_dat_path = os.path.join(os.path.dirname(__file__),\n",
+    "                                         self.prefix_data,'path.dat')\n",
+    "            with open(path_dat_path, 'r') as file:\n",
+    "                lines = [line.strip() for line in file]\n",
+    "            packmol = lines[2].split('=')[1]\n",
+    "            command = f\"{packmol} < packmol.inp > packmol.out\"\n",
+    "            subprocess.run(command, shell=True, check=True)\n",
+    "        except Exception as e:\n",
+    "             print(f\"Error running packmol: {e}\")\n",
+    "             sys.exit(1)\n",
+    "\n",
     "        # write POSCAR\n",
     "        self.covert_pdb_to_poscar(outfile)\n",
     "\n",
@@ -65,13 +75,18 @@
     "            self.clear_dummy_files()\n",
     "\n",
     "    def read_atomic_mass_table(self):\n",
-    "        if not(os.path.isfile('atomic_mass_table.dat')):\n",
+    "        atomic_mass_table_path = os.path.join(os.path.dirname(__file__),\n",
+    "                                              self.prefix_data,'atomic_mass_table.dat')\n",
+    "        if not os.path.isfile(atomic_mass_table_path):\n",
     "            print('atomic_mass_table.dat is not found.\\n \\\n",
     "                  please visit https://github.com/TY-Jeong/arpaca')\n",
     "            sys.exit(0)\n",
-    "        lines = [line.strip() for line in open('atomic_mass_table.dat')]\n",
+    "\n",
+    "        with open(atomic_mass_table_path,'r') as file:\n",
+    "            lines = [line.strip() for line in file]\n",
+    "\n",
     "        for line in lines:\n",
-    "            [name, mass] = line.split('\\t')\n",
+    "            name, mass = line.split('\\t')\n",
     "            self.atomMass[name] = float(mass)\n",
     "\n",
     "    def divide_chem_formula(self):\n",
@@ -123,7 +138,8 @@
     "                f.write(\"end structure\\n\\n\")\n",
     "\n",
     "    def covert_pdb_to_poscar(self, outfile):\n",
-    "        lines = [line.strip() for line in open('./packmol_output.pdb')]\n",
+    "        with open ('packmol_outpyt.pdb','r') as file:\n",
+    "            lines = [line.strip() for line in file]\n",
     "        num_tot = np.sum(self.atom_num)\n",
     "        shift = (self.alat-self.alat_pbc)/2\n",
     "        with open(outfile, 'w') as f:\n",
@@ -154,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +197,8 @@
     "        self.charge = charge\n",
     "        self.ncore = ncore\n",
     "\n",
+    "        self.prefix_data = '../../data/'\n",
+    "\n",
     "        # write KPOINTS\n",
     "        self.write_kpoints()\n",
     "        \n",
@@ -205,24 +223,32 @@
     "        self.write_incar()\n",
     "\n",
     "    def read_recommended_potcar(self):\n",
-    "        if not(os.path.isfile('recommended_potcar.dat')):\n",
+    "        recommended_potcar_path = os.path.join(\n",
+    "            os.path.dirname(__file__), self.prefix_data+'recommended_potcar.dat')\n",
+    "        if not os.path.isfile(recommended_potcar_path):\n",
     "            print('recommended_potcar.dat is not found.\\n \\\n",
     "                  please visit https://github.com/TY-Jeong/arpaca')\n",
-    "            sys.exit(0)\n",
-    "        lines = [line.strip() for line in open('recommended_potcar.dat')]\n",
+    "            sys.exit(0)     \n",
+    "\n",
+    "        with open(recommended_potcar_path, 'r') as file:\n",
+    "            lines = [line.strip() for line in file]\n",
+    "\n",
     "        for line in lines:\n",
-    "            [name, recommend] = line.split('\\t')\n",
+    "            name, recommend = line.split('\\t')\n",
     "            self.pot_recommend[name] = recommend\n",
     "    \n",
     "    def read_path_potcar(self):\n",
-    "        if not(os.path.isfile('path.dat')):\n",
+    "        path_dat_path = os.path.join(os.path.dirname(__file__), self.prefix_data+'path.dat')\n",
+    "        if not os.path.isfile(path_dat_path):\n",
     "            print('path.dat is not found.\\n')\n",
     "            sys.exit(0)\n",
-    "        lines = [line.strip() for line in open('path.dat')]\n",
-    "        self.prefix_pot = lines[0].split('=')[1] if self.potcar == 'pbe'\\\n",
-    "            else lines[1].split('=')[1]\n",
-    "        if self.prefix_pot[-1] != '/':\n",
-    "            self.prefix_pot += '/'\n",
+    "\n",
+    "        with open(path_dat_path, 'r') as file:\n",
+    "            lines = [line.strip() for line in file]\n",
+    "\n",
+    "        self.prefix_pot = lines[0].split('=')[1] if self.potcar == 'pbe' else lines[1].split('=')[1]\n",
+    "        # if self.prefix_pot[-1] != '/':\n",
+    "        #     self.prefix_pot += '/'\n",
     "\n",
     "    def write_kpoints(self):\n",
     "        with open('./KPOINTS','w') as f:\n",
@@ -233,18 +259,21 @@
     "            f.write(\"0 0 0\")\n",
     "            \n",
     "    def write_potcar(self):\n",
-    "        if not(os.path.isfile('POSCAR')):\n",
+    "        if not os.path.isfile('POSCAR'):\n",
     "            print('no POSCAR file exists.')\n",
     "            sys.exit(0)\n",
-    "        lines = [line.strip() for line in open('POSCAR')]\n",
+    "        \n",
+    "        with open('POSCAR', 'r') as file:\n",
+    "            lines = [line.strip() for line in file]\n",
     "        self.atom_name = lines[5].split()\n",
     "        self.atom_num = np.array(lines[6].split(), dtype=int)\n",
     "\n",
     "        with open('./POTCAR','w') as f:\n",
     "            for name in self.atom_name:\n",
-    "                pot = self.prefix_pot+self.pot_recommend[name]+\"/POTCAR\"\n",
-    "                lines = [line for line in open(pot)]\n",
-    "                for line in lines:\n",
+    "                pot = os.path.join(self.prefix_pot, self.pot_recommend[name], 'POTCAR')\n",
+    "                with open(pot, 'r') as pot_file:\n",
+    "                    pot_lines = [line for line in pot_file]\n",
+    "                for line in pot_lines:\n",
     "                    f.write(line)\n",
     "                    if 'ZVAL' in line:\n",
     "                        self.zval += [float(line.split()[5])]\n",
@@ -294,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +341,8 @@
     "            sys.exit(0)\n",
     "\n",
     "        # read xdatcar\n",
-    "        self.lines = [line for line in open(xdatcar)]\n",
+    "        with open(xdatcar, 'r') as file:\n",
+    "            self.lines = [line for line in file]\n",
     "        self.num_atoms = np.array(self.lines[6].split(), dtype=int).sum()\n",
     "\n",
     "        if len(args) == 1:\n",
@@ -352,9 +382,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m struc \u001b[38;5;241m=\u001b[39m \u001b[43mgenAmorphous\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10.00\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mHf34O67\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[6], line 17\u001b[0m, in \u001b[0;36mgenAmorphous.__init__\u001b[0;34m(self, density, chem_formula, outfile, clear_dummy)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchem_formula \u001b[38;5;241m=\u001b[39m chem_formula\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39matomMass \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_atomic_mass_table\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39matom_name \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39matom_num \u001b[38;5;241m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[6], line 58\u001b[0m, in \u001b[0;36mgenAmorphous.read_atomic_mass_table\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mread_atomic_mass_table\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 58\u001b[0m     atomic_mass_table_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mdirname(\u001b[38;5;18;43m__file__\u001b[39;49m),\n\u001b[1;32m     59\u001b[0m                                           \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprefix_data,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124matomic_mass_table.dat\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(atomic_mass_table_path):\n\u001b[1;32m     61\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124matomic_mass_table.dat is not found.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;130;01m\\\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;124m              please visit https://github.com/TY-Jeong/arpaca\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
    "source": [
     "struc = genAmorphous(10.00, 'Hf34O67')"
    ]
